--- a/gg.html
+++ b/gg.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-        <input type="text">
-        <select>
-            <option>Việt Nam</option>
-            <option>TQ</option>
-        </select>
-        <button >Ấn đi</button>
-</body>
 
+    <form action="" method="GET"> 
+        <input type="text" name="search_query"/> 
+        <!-- params -->
+        <input type="submit" value="Tìm kiếm"/>
+   </form>
+</body>
 </html>
