--- a/Bai5/toantu.html
+++ b/Bai5/toantu.html
@@ -26,6 +26,12 @@
         alert(5*'2'+1) // => 10+1 = 11
         alert('a'/10-1) // => Lỗi (NaN - Not a number)
         alert(5*'2'+'1'+1) //  => 10 + '1' +1 => '101'+1 => '1011'
+
+        // TTSS: >, <, >=, <=, ==, !=, ===, !==
+        let x = 5==5; true
+        let y = 7!=5; true
+        let z = 5=='5'; true
+        let t = 5==='5'; false
     </script>
 </body>
 </html>
