--- a/Bai5/ex1.html
+++ b/Bai5/ex1.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <!-- Nhập vào 2 số a và b, tính a+b và in ra-->
+    <!-- Không dùng dấu, không ký tự đặc biệt, tuyệt đối không dùng dấu cách, không bắt đầu từ số -->
     <script>
-        // Bất kì kiểu nhập vào nào thì biến nhận được luôn là String
-        let a = +prompt("Nhập vào đi: "); 
-        let b = +prompt("Nhập vào đi: ");
-        alert(a+b); 
+        let day = prompt("Enter your birthday");
+        let month = prompt("Enter your birthmonth");
+        let year = prompt("Enter your birthyear");
+        let dmy = day + '-' + month + '-' + year;
+        document.write("Your birth day: " + dmy);
     </script>
 </body>
+
 </html>
