xong bai diem thi

--- a/Bai7/tinhGiaHoaQua.html
+++ b/Bai7/tinhGiaHoaQua.html
@@ -23,6 +23,8 @@
                 g = "20000 VND/KG"
             } else if (n == "táo") {
                 g = "30000 VND/KG"
+            } else {
+                g = " Không tìm thấy quả cần t"
             }
             document.getElementById('rs').innerHTML = g;
         }
