--- a/Bai7/tinhDiem.html
+++ b/Bai7/tinhDiem.html
@@ -20,9 +20,9 @@
         <option value="1">KV1</option>
         <option value="2">KV2</option>
         <option value="3">KV2-NT</option>
-        <option value="3">KV3</option>
+        <option value="4">KV3</option>
     </select>
-    <button onclick="">Tính điểm</button>
+    <button onclick="tinh()">Tính điểm</button>
     <script>
         function tinh() {
             let toan = +document.getElementById('mon-toan').value;
